# 2025-data-release-program-comprehension-jayvee

./: .gitignore  1_data_preparation.ipynb  2_data_integrity.ipynb  3_data_analysis.ipynb  4_qualitative_data_analysis.ipynb  README.md  pyproject.toml  util.py
.github/workflows/: codebook-deploy.yml
data/: data_anon.db  limesurvey_survey_answers.csv  limesurvey_survey_structure.lss  participants.csv
experiment/: README.md
experiment/controlled-experiment-tool-2.0.0/: Dockerfile  README.md  docker-compose.yml
experiment/controlled-experiment-tool-2.0.0/backend/: .gitignore  schema.json
experiment/controlled-experiment-tool-2.0.0/client-web/: .env.development  README.md  index.html  package-lock.json  package.json
experiment/controlled-experiment-tool-2.0.0/client-web/src/: App.tsx  env.d.ts  events.ts  main.tsx
experiment/tasks/: config.ts  task2.py
survey/: README.md  qda.csv
survey/codebook/: README.md  docker-compose.yml  quartz.config.ts  quartz.layout.ts
survey/codebook/.obsidian/: workspace.json
survey/codebook/content/: index.md
survey/codebook/content/.obsidian/: app.json  appearance.json  core-plugins-migration.json  core-plugins.json  daily-notes.json  graph.json  types.json  workspace  workspace.json
survey/codebook/content/Codes (List)/: EX1.1 - Uniform documentation structure improves speed.md  EX1.2 - Quality of documentation of Jayvee and Python.md  EX1.3 - Documentation affects understanding.md  EX2.1 - Tool support affects understanding.md  EX2.2 - Community support.md  EX2.3 - Availability of third-party educational resources.md  (+40 more)
(+38 files in other folders)
